clean_names eval = FALSE to avoid bug

--- a/workflows/wrangle_data/clean_column_names.Rmd
+++ b/workflows/wrangle_data/clean_column_names.Rmd
@@ -13,6 +13,6 @@ print(df)
 
 To tidy it up, you can use the `clean_names()` function from the `janitor` package:
     
-```{r}
+```{r eval = FALSE}
 janitor::clean_names(df)
 ```
