--- a/training/04_editing_eml.Rmd
+++ b/training/04_editing_eml.Rmd
@@ -3,7 +3,7 @@
 This chapter is a practical tutorial for using R to read, edit, write, and validate EML documents. Much of the information here can also be found in the vignettes for the R packages used in this section (e.g. the <a href = 'https://github.com/ropensci/EML/blob/master/vignettes/creating-EML.Rmd' target='_blank'>EML package</a>).
 
 ```{block, type = "note"}
-This chapter will be longest of all 10 sections! This is a reminder to take frequent breaks when completing this section.
+This chapter will be longest of all the sections! This is a reminder to take frequent breaks when completing this section.
 ```
 
 ```{r, child = '../workflows/edit_data_packages/get_package_and_eml.Rmd'}
