--- a/workflows/edit_eml/edit_datatables.Rmd
+++ b/workflows/edit_eml/edit_datatables.Rmd
@@ -50,10 +50,9 @@ After getting a list of `dataTables`, assign the resulting list to `dataTable` E
 doc$dataset$dataTable <- dts
 ```
 
-Sometimes the metadata intended for `dataTable` ends up in `otherEntity`. You can use `eml_otherEntity_to_dataTable` to easily move items in `otherEntity` over to `dataTable`. 
+By default, the online submission form adds all entities as `otherEntity`, even when most should probably be `dataTable`.  You can use `eml_otherEntity_to_dataTable` to easily move items in `otherEntity` over to `dataTable`. Most tabular data or data that contain variables should be listed as a `dataTable`. Data that do not contain variables (eg: plain text readme files, pdfs, jpegs) should be listed as `otherEntity`.
 ```{r, eval = FALSE}
 eml_otherEntity_to_dataTable(doc, 
                              1, # which otherEntities you want to convert, for multiple use - 1:5
                              validate_eml = F) # set this to False if the physical or attributes are not added
 ```
-
