Revised edit_attributelists.Rmd

--- a/workflows/edit_eml/edit_attributelists.Rmd
+++ b/workflows/edit_eml/edit_attributelists.Rmd
@@ -70,7 +70,7 @@ attributes <- data.frame(
     stringsAsFactors = FALSE)
 ```
 
-However, typing this out in R can be a major pain. Luckily, there is a Shiny app that you can use to build attribute information. You can use the app to build attributes from a data file loaded into R (recommended as the app will auto-fill some fields for you) to edit an existing attribute table, or to create attributes from scratch. Use the following commands to create or modify attributes (these commands will launch a Shiny app in your web browser):
+However, typing this out in R can be a major pain. Luckily, there's a Shiny app that you can use to build attribute information. You can use the app to build attributes from a data file loaded into R (recommended as the app will auto-fill some fields for you) to edit an existing attribute table, or to create attributes from scratch. Use the following commands to create or modify attributes (these commands will launch a Shiny app in your web browser):
 
 ```{r, eval = FALSE}
 # From data (recommended)
