--- a/workflows/edit_eml/edit_datatables.Rmd
+++ b/workflows/edit_eml/edit_datatables.Rmd
@@ -29,3 +29,30 @@ doc$dataset$dataTable[[i]] <- dataTable
 ```
 
 Where `i` is the index that you wish insert your `dataTable` into.
+
+To add a list of `dataTables` to avoid the unpacking problem above you will need to create a list of `dataTables`
+
+```{r, eval = FALSE}
+dts <- list() # create an empty list
+for(i in seq_along(tables_you_need)){
+  # your code modifying/creating the dataTable here
+  dataTable <- eml$dataTable(entityName = dataTable$entityName,
+                             entityDescription = dataTable$entityDescription,
+                             physical = physical,
+                             attributeList = attributeList)
+  
+  dts[[i]] <- dataTable # add to the list
+}
+```
+
+After getting a list of `dataTables`, assign the resulting list to `dataTable` EML
+```{r, eval = FALSE}
+doc$dataset$dataTable <- dts
+```
+
+By default, the online submission form adds all entities as `otherEntity`, even when most should probably be `dataTable`.  You can use `eml_otherEntity_to_dataTable` to easily move items in `otherEntity` over to `dataTable`. Most tabular data or data that contain variables should be listed as a `dataTable`. Data that do not contain variables (eg: plain text readme files, pdfs, jpegs) should be listed as `otherEntity`.
+```{r, eval = FALSE}
+eml_otherEntity_to_dataTable(doc, 
+                             1, # which otherEntities you want to convert, for multiple use - 1:5
+                             validate_eml = F) # set this to False if the physical or attributes are not added
+```
