--- a/workflows/pi_correspondence/email_templates_pi_faqs.Rmd
+++ b/workflows/pi_correspondence/email_templates_pi_faqs.Rmd
@@ -49,14 +49,23 @@ Please read our software submission guidelines for more detailed information: ht
 *Issue: Web form not cooperating.*  
 
 > A: To help us diagnose the problem, could you let us know the following:
+
 - Which operating system (including the version) and browser (with version #) are you using?
 - At which exact step did the issue arise?
 - What error message did you receive?
-Please provide us with any relevant screenshots. Do you have any reason to believe that you may be using a slow internet connection?
+- Do you have any reason to believe that you may be using a slow internet connection?
+
+> Please provide us with any relevant screenshots and we will troubleshoot from there.
 
 *Issue: Can't log in to the Arctic Data Center*   
 
-> A: Please accept our apologies that you are experiencing difficulty loggin in.  Please try a different internet browser (Chrome, firefox, internet explorer etc.).  If the problem persists please try clearing your cache and then re-logging in with orcid Id, Finally,privacy blockers (like EFF's privacy badger https://www.eff.org/privacybadger) block the cookies needed for the login to work. To enable the cookies you need to disable your privacy tracker for arcticdata.io.
+> A: Please accept our apologies that you are experiencing difficulty logging in. We suggest trying these troubleshooting steps:
+
+- Try a different internet browser (Chrome, Firefox, Internet Explorer etc.)
+- Try clearing your cache and then re-logging in with orcid Id
+- Privacy blockers (like EFF's privacy badger https://www.eff.org/privacybadger) block the cookies needed for the login to work. To enable the cookies you need to disable your privacy tracker for arcticdata.io.
+
+> If the problem persists please let us know what step the error occured or if there were error messages you have recieved.
 
 ### non-NSF
 *Issue: Can I submit a non-NSF funded dataset?*
