--- a/workflows/pi_correspondence/email_templates/A_initial_email_template.Rmd
+++ b/workflows/pi_correspondence/email_templates/A_initial_email_template.Rmd
@@ -32,6 +32,10 @@ Describes DATA in package (ideally > 100 words)
 
 #### Data
 
+Multiple datasets under the same project
+> Suggest to use the portals feature
+> Data portals enable related datasets, such as those that are part of a larger research project or organization, to be discovered together. It also enables some custom branding for the group or project. Here is an example page that we created for the Distributed Biological Observatory:https://arcticdata.io/catalog/portals/DBO. If you are interested in creating a portal for your datasets, you can get one started here:[link to create].
+
 At least one data file
 
 > We noticed that no data files were submitted. With the exception of sensitive social science data, we seek to include all data products prior to publication. We wanted to check in if additional files will be submitted before we move forward with the submission process.
@@ -46,6 +50,10 @@ Open formats
 File contents and relationships among files are clear
 
 > Could you provide a short description of the files submitted? Information about how each file was generated (what software, source files, etc.) will help us create more robust metadata for long term use.
+
+We try not to prescribe a way the researchers must format their data as long as reasonable. However, in extreme cases (for example Excel spreadsheets with data and charts all in one sheet) we will want to kindly ask them to reformat.
+
+> We would like to suggest a couple of modifications to the structure of your data. This will others to re-use it most effectively. [DESCRIBE WHAT MAY NEED TO BE CHANGED IN THE DATA SET]. Our data submission guidelines page (https://arcticdata.io/submit/) outlines what are best practices for data submissions to the Arctic Data Center. Let us know if you have any questions or if we can be of any help.
 
 #### Attributes
 
