--- a/workflows/pi_correspondence/email_templates/C_additional_email_templates.Rmd
+++ b/workflows/pi_correspondence/email_templates/C_additional_email_templates.Rmd
@@ -2,35 +2,21 @@
 
 #### Deadlines
 If the PI is checking about dates/timing:
-
-> We process submissions in the order in which they are received, and yours still has a few ahead of it in our queue. Are you facing any deadlines? If so, we may be able to expedite publication of your submission.
+> [give rough estimate of time it might take] 
+> Are you facing any deadlines? If so, we may be able to expedite publication of your submission.
 
 #### Pre-assigned DOI
 If the PI needs a DOI right away:
 
 > We can provide you with a pre-assigned DOI that you can reference in your paper, as long as your submission is not facing a deadline from NSF for your final report. However, please note that it will not become active until after we have finished processing your submission and the package is published. Once you have your dataset published, we would appreciate it if you could send us the DOI of your published paper. We are working to build our catalog of dataset citations in the Arctic Data Center.
 
-#### Best practices
-
->We noticed that the data files submitted are in _____ format. We recommend conversion of these files into a plain text/csv (OR ANOTHER APPROPRIATE OPEN-SOURCE) format in order to facilitate an accurate transfer of information to future researchers and ensure preservation of the data in perpetuity. Below are some linked articles about data science best practices that the Arctic Data Center adheres to:  
-"Good Enough Practices in Scientific Computing" - http://arxiv.org/pdf/1609.00037v1.pdf  
-
-Zip files
-
->Except for very specific file types, we do not recommend that data are archived in zip format. Data that are zipped together can present a barrier to reuse since it is difficult to accurately document each file within the zip file in a machine readable way.
-
 #### Adding metadata via R
 
->KNB does not support direct uploading of EML metadata files through the website (we have a webform that creates metadata), but you can upload your data and metadata through R!
+>KNB does not support direct uploading of EML metadata files through the website (we have a webform that creates metadata), but you can upload your data and metadata through R.
 
 >[Here](http://training.arcticdata.io/materials/arctic-data-center-training/programming-metadata-and-data-publishing.html) are some training materials we have that use both the `EML` and `datapack` packages. It explains how to set your authentication token, build a package from metadata and data files, and publish the package to one of our test sites. I definitely recommend practicing on a test site prior to publishing to the production site your first time through. You can point to the KNB test node (dev.nceas.ucsb.edu) using this command: `d1c <- D1Client("STAGING2", "urn:node:mnTestKNB")`
 
 >If you prefer, there are Java, Python, MATLAB, and Bash/cURL clients as well.
-
-
-####  Portal Pages
-
->It looks like you have several related submissions. If you are interested I can group these datasets under a new "portal" feature we are rolling out. Data portals enable related datasets, such as those that are part of a larger research project or organization, to be discovered together. It also enables some custom branding for the group or project. Here is an example page that we created for the Distributed Biological Observatory: https://arcticdata.io/catalog/portals/DBO. If you are interested in creating a portal for your datasets, I can get one started for you that you can then edit in our portal web editor.
 
 #### Finding multiple data packages
 
@@ -52,5 +38,3 @@ Zip files
 > After completing this, all of your previously submitted data pacakges should show up on your KNB "My Profile" page, whether you are logged in using your ORCiD or Morpho account, and you will be able to submit data either using Morpho or our web interface.
 
 > Or, try reversing my instructions - log in first using your Morpho account (by clicking the "existing account" button and selecting organization "unaffiliated"), look for your ORCiD account, then log out and back in with ORCiD to confirm the linkage.
-
-
