--- a/workflows/solr_queries/y_example_solr_queries.Rmd
+++ b/workflows/solr_queries/y_example_solr_queries.Rmd
@@ -142,7 +142,7 @@ query(adc, list(q = paste0("documents:*f551460b-ce36-4dd3-aaa6-3a6c6e338ec9"),
       as = "data.frame")
 ```
 
-### Query for EMLs during a specific time
+### Query for files uploaded during a specific time
 ```{r}
 query(adc, list(q="dateUploaded:[2020-05-06T00:00:00Z TO NOW]",
                 fl="title,identifier,resourceMap,dateUploaded,dateModified",
