--- a/workflows/pi_correspondence/final_review_checklist.Rmd
+++ b/workflows/pi_correspondence/final_review_checklist.Rmd
@@ -22,19 +22,21 @@ Included lines for FAIR:
 - no abbreviations or garbled text
 
 ### DataTable / OtherEntity / SpatialVectors
-- in the correct one: **DataTable / OtherEntity / SpatialVectors** for the file type
+- in the correct one: **DataTable / OtherEntity / SpatialVector / SpatialRaster** for the file type
 - **entityDescription** - longer than 5 words and unique
 - **physical** present and format correct
 
 #### Attribute Table
 - complete
-- Definition longer than 5 words
+- attributeDefinitions longer than 3 words
 - **Variables** match what is in the file
 - **Measurement domain** - if appropirate (ie dateTime correct)
 - **Missing Value Code** - accounted for if applicable
 
 ### People
 - complete information for each person in each section
+    + including ORCID and e-mail address for all contacts
+    + people repeated across sections should have consistent information
 
 ### Geographic region
 - the map looks correctand matches the geographic description
