--- a/workflows/misc_file_types/netCDF_chunk.Rmd
+++ b/workflows/misc_file_types/netCDF_chunk.Rmd
@@ -1,6 +1,6 @@
 ## NetCDFs
 
-This section is for dealing with NetCDF (.nc) files. These files require data tables but since they can not be simply opened on the computer using a text editor or Excel, you can use Panoply to explore them or the R commands. 
+This section is for dealing with NetCDF (.nc) files. These files require *data tables* but since they can not be simply opened on the computer using a text editor or Excel, you can use Panoply to explore them or the R commands. 
 
 ```{r, eval=FALSE}
 library(ncdf4)
